fix dark mode and search bar

--- a/style.css
+++ b/style.css
@@ -39,13 +39,13 @@ body{
     padding:0.5rem 1rem;
     border-radius: 50px;
     font-size: 1rem;
-    color:#fff;
+    color: white;
     font-family: inherit;
 }
 
 .search:focus{
     outline:0;
-    background-color: olivedrab;
+    background-color: rgb(24, 23, 23);
 }
 
 .search::placeholder{
@@ -105,23 +105,25 @@ body{
 
 .main-title{
     font-size: 50px;
-    padding-top: 5%;
+    padding-top: 3%;
     text-align: center;
-    color: #fefefe;
+    color: black;
     background-color: orange;
+    font-family: "Sen";
 }
 
 .sub-title{
-    font-size: 20px;
+    font-size: 15px;
     padding-top: 1%;
     padding-bottom: 2%;
     text-align: center;
-    color: #fefefe;
+    color: black;
     background-color: orange;
+    font-family: monospace;
 }
 
 #source{
-    color: aquamarine;
+    color: blue;
 }
 
 main{
@@ -134,9 +136,10 @@ main{
 }
 
 .movie-list{
+    background-color: orange;
     width: 300px;
     margin: 1rem;
-    border-radius: 3px;
+    border-radius: 20px;
     box-shadow: 0.2px 4px 5px rgba(0,0,0,0.1);
     position: relative;
     overflow: hidden;
@@ -148,38 +151,45 @@ main{
     object-fit: cover;
 }
 
-
 .movie-list-info{
     color: white;
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-column-gap: 10px;
+    align-items: flex-start;
     justify-content: space-between;
     padding: 0.5rem 1rem 1rem;
     letter-spacing: 0.5;
 }
 
 .movie-list-title{
+    grid-column-start: 1;
+    grid-column-end: 3;
     margin-top: 0;
+    color: black;
 }
 
 .movie-list-info span{
+    grid-column-start: 3;
+    grid-column-end: 4;
     border-style: solid;
-    border-color: yellow;
     padding: 0.25rem 0.5rem;
-    border-radius: 3px;
+    border-radius: 10px;
     font-weight: bold;
 }
 
 .movie-list-info span.green{
-    color: rgb(42, 218, 42);
+    color: green;
+    border-color: green;
 }
 
-.movie-list-info span.orange{
-    color: orange;
+.movie-list-info span.yellow{
+    color: yellow;
+    border-color: yellow;
 }
 
 .movie-list-info span.red{
     color: red;
+    border-color: red;
 }
 
 .movie-list-button{
@@ -190,7 +200,6 @@ main{
     border:0;
     border-radius: 50px;
     padding: 10px 20px;
-    margin-top: 5px;
 }
 
 .movie-list-desc{
@@ -211,7 +220,6 @@ main{
     filter: blur(8px);
 }
 
-
 .modal-header {
     padding: 2px 16px;
     font-size: 3rem;
@@ -219,7 +227,6 @@ main{
     background-color: orange;
     color:black;
 }
-
 
 .modal-body {
     padding: 50px 150px;
@@ -279,21 +286,16 @@ main{
   background-color: white;
 }
 
+.search.active{
+    color: black;
+}
+
 .search.active::placeholder{
     color: black;
 }
 
-.main-title.active{
-    color: black;
-}
-
-.sub-title.active{
-    color: black;
-}
-#source.active{
-    color: blue;
-}
-.movie-list-title.active {
+.search.active:focus{
+    background-color: wheat;
     color: black;
 }
 
@@ -311,6 +313,16 @@ main{
     transform: translateX(-20px);
 }
 
+.footer{
+    bottom:0;
+    left:0;
+    width:100%;
+    background-color: orange;
+    color: black;
+    text-align: center;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
